# hackyeah2024

./: .gitignore  Makefile  README.md  backend.Dockerfile  frontend.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy_backend.yaml  deploy_frontend.yaml
notebooks/: 01_transcribe.ipynb  02_extract_audio.ipynb  hackyeahyeah.ipynb
src/: __init__.py  frontend.py  main.py  metrics.py  setup.py
src/OpenAINodes/: StructureNode.py  SummarizationNode.py  TopicChangeNode.py  __init__.py
src/VAD/: __init__.py  vad.py
src/metrics/: __init__.py  metrics.py
src/ocr/: frame_extractor.py  ocr.py
src/pathManager/: PathManager.py  __inti__.py
src/transcription/: transcribe.py
src/video_processing/: __init__.py  audio.py  audio_file.py  frame_extractor.py
src/whisper/: whisper.py
