[tool.poetry]
name = "hackyeah2024"
version = "0.1.0"
description = ""
authors = [
    "YgLK <jkbszpunar@gmail.com>",
    "Zogfryt <zogfryt@gmail.com>",
    "kuballa <jziomek669@gmail.com>",
    "BartoszSambor <bartek.sambor@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
audio-extract = "^0.7.0"
torch = "^2.4.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
easyocr = "^1.7.2"
nltk = "^3.9.1"
jupyter = "^1.1.1"
moviepy = "^1.0.3"
openai = "^1.50.2"
webrtcvad = "^2.0.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
