[tool.poetry]
name = "hackyeah2024"
version = "0.1.0"
description = ""
authors = [
    "YgLK <jkbszpunar@gmail.com>",
    "Zogfryt <zogfryt@gmail.com>",
    "kuballa <jziomek669@gmail.com>",
    "BartoszSambor <bartek.sambor@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
audio-extract = "^0.7.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
jupyter = "^1.1.1"
openai = "^1.50.2"
webrtcvad = "^2.0.10"
python-dotenv = "^1.0.1"
pydub = "^0.25.1"
#librosa="^0.10.2.post1" install with pip
fastapi = {extras = ["standard"], version = "^0.115.0"}
pandas = "^2.2.3"
plotly = "^5.24.1"
streamlit = "^1.38.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
